# hilmy-dev-tools-api

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile.account  Dockerfile.apprepo  Dockerfile.gateway  Dockerfile.link  Dockerfile.linkresolver  Dockerfile.mailer  README.md
account/: .env.example  Cargo.toml  build.rs
account/migrations/2023-03-04-134531_create_table_account/: down.sql  up.sql
account/proto/: account.proto
account/src/: controller.rs  env.rs  main.rs  proto.rs  schema.rs
account/src/controller/: account.rs  mod.rs
account/src/dto/: account_change_email.rs  account_reset_password.rs  account_sign_up.rs  jwt_claims.rs  mod.rs
account/src/helper/: argon2.rs
account/src/model/: account.rs  mod.rs
account/src/model/model_type/: enum_account_role.rs  mod.rs
apprepo/: .env.example  Cargo.toml  build.rs
apprepo/migrations/2023-03-23-080008_create_table_apprepo/: down.sql  up.sql
apprepo/proto/: apprepo.proto
apprepo/src/: env.rs  main.rs  proto.rs  schema.rs
apprepo/src/controller/: apprepo.rs  mod.rs
apprepo/src/model/: apprepo.rs  mod.rs
gateway/: .env.example  Cargo.toml  build.rs
gateway/migrations/2023-02-25-120737_create_table_service_info/: down.sql  up.sql
gateway/migrations/2023-02-25-124702_create_table_service_address/: down.sql  up.sql
gateway/migrations/2023-03-01-030904_insert_into_service_info_val_account/: down.sql  up.sql
gateway/migrations/2023-03-01-030904_insert_into_service_info_values/: down.sql  up.sql
gateway/proto/: gateway.proto
gateway/src/: controller.rs  env.rs  main.rs  model.rs  schema.rs
gateway/src/contract/graphql/: account.rs  apprepo.rs  link.rs  mod.rs  op_res.rs  op_result.rs  service_address.rs  service_info.rs  sign_in_result.rs
gateway/src/controller/: mod.rs
gateway/src/controller/graphql/: mod.rs  v1.rs
gateway/src/controller/graphql/v1/: account.rs  apprepo.rs  link.rs  mod.rs  service.rs  service_address.rs  service_info.rs
gateway/src/dto/: mod.rs  service_name.rs  token.rs
gateway/src/gql_schema/: schema.rs
gateway/src/helper/: get_account_id.rs  is_admin.rs  mod.rs
gateway/src/model/: service_address.rs  service_info.rs
gateway/src/model/model_type/: enum_service_address_status.rs  mod.rs
gateway/src/service/grpc/: client.rs
lib/db/: Cargo.toml
lib/db/src/: pg.rs
lib/db/src/pg/: connection.rs  migration.rs
lib/db/src/redis/: connection.rs
link/: .env.example  Cargo.toml  build.rs
link/migrations/2023-03-21-054952_create_table_link/: down.sql  up.sql
link/proto/: link.proto
link/src/: main.rs  proto.rs  schema.rs
link/src/controller/: link.rs  mod.rs
link/src/model/: link.rs  mod.rs
linkresolver/: .env.example  Cargo.toml
linkresolver/schema/: gateway.schema.graphql
linkresolver/src/: dto.rs  env.rs  main.rs  static_file.rs
linkresolver/src/contract/: gql_query.rs  mod.rs
linkresolver/src/controller/: mod.rs  resolver.rs  root.rs
linkresolver/static/not_found/: index.html
mailer/: .env.example  Cargo.toml
mailer/src/: contract.rs  env.rs  main.rs
mailer/src/helper/: mailer.rs
mailer/src/service/: kafka_consumer.rs  mod.rs  rabbitmq_consumer.rs
