[package]
name = "tools-account"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tonic = "0.8"
prost = "0.11"
tokio = { version = "1", features = ["rt-multi-thread"] }
diesel_migrations = "2"

tools-db = { path = "../lib/db" }

[build-dependencies]
tonic-build = "0.8"
