[package]
name = "tools-gateway"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4"
actix-cors = "0.6"
actix-web-httpauth = "0.8"
async-graphql = { version = "5", features = ["uuid", "chrono"] }
async-graphql-actix-web = "5"                                                 # If you need to integrate into actix-web
tonic = "0.8"
prost = "0.11"
diesel = { version = "2", features = ["postgres", "r2d2", "uuid", "chrono"] }
diesel_migrations = "2"
uuid = { version = "1", features = ["v4", "fast-rng", "macro-diagnostics"] }
chrono = "0.4"

tools-account = { path = "../account" }
tools-lib-db = { path = "../lib/db" }
