[package]
name = "tools-linkresolver"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4"
actix-files = "0.6"
reqwest = { version = "0.11", features = ["json"] }
cynic = { version = "2", features = ["http-reqwest"] }
