[package]
name = "tools-mailer"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
lettre = "0.10"
rdkafka = { version = "0.29", features = ["cmake-build"] }
futures = "0.3"
serde = "1"
serde_json = "1"
