[package]
name = "tools-mailer"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
lettre = { version = "0.10", default-features = false, features = [
    "rustls-tls",
    "builder",
    "hostname",
    "smtp-transport",
    "pool",
] }
futures = "0.3"
serde = "1"
serde_json = "1"
rdkafka = { version = "0.29", features = ["cmake-build"] }
lapin = "2"
tokio-executor-trait = "2"
tokio-reactor-trait = "1"
